@@ -1,6 +1,9 @@
+2015-02-02 Hao Feng (RDS) <fenghao@mail.xhu.edu.cn>
+	* modify wlam.f to augment more nuclear vibrational wavefunctions
+
 2015-01-17 Hao Feng (RDS) <fenghao@mail.xhu.edu.cn>
 	* modify config script and add rmfiles script
-	
+
 2015-01-01 Hao Feng (RDS) <fenghao@mail.xhu.edu.cn>
 	* remove symmetry number dependency
 
